...
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_email_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_leave_current_company"
            android:backgroundTint="@color/yellowish_orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Leave Current Company"
            android:textSize="18sp"
...
