...
    <!-- Used in Activities Dialogs -->
    <string name="input_name">Please input your name</string>
    <string name="input_password">Please input your password</string>
    <string name="input_email">Please input your email address</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to Log Out?</string>
    <string name="continue_on">Continue</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="permissions_error">ERROR: Could not obtain the required permissions</string>
    <string name="language_switch">The language has been switched</string>
    <string name="change_language">Change Language</string>
...
